[package]
name = "const_aes"
version = "0.1.1"
edition = "2021"
authors = ["NioZ"]
description = "Encrypt data using aes 128 at compile time"
license = "MIT"
repository = "https://github.com/NioZow/const-aes"
documentation = "https://docs.rs/const-aes"
readme = "README.md"
keywords = ["aes"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = 'debuginfo'
panic = 'abort'
debug = false
